# devops-bench

./: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY_CONTACTS  pyproject.toml
.github/workflows/: guardrails.yml
devops_bench/: README.md  __init__.py  cli.py
devops_bench/agents/: __init__.py  base.py  config.py  result.py
devops_bench/agents/api/: __init__.py  agent.py  mcp.py  skills.py
devops_bench/agents/chaos/: __init__.py  chaos.py  chaos_test.py
devops_bench/agents/shared/: cli_capabilities.py  skills.py
devops_bench/chaos/: agent.py  base.py  schema.py  spec.py
devops_bench/core/: context.py  registry.py
devops_bench/deployers/: README.md  base.py  factory.py  tofu.py
devops_bench/evalharness/: artifacts.py  base.py  default.py  reporter.py  scenario.py
devops_bench/k8s/: kubectl.py
devops_bench/metrics/: __init__.py  _skills.py  base.py  chaos_metrics.py  checklist.py  geval.py  grounding.py  outcome_validity.py  pipeline.py  scoring.py  tool_invocation.py
devops_bench/models/: claude.py  gemini.py  ollama.py
devops_bench/providers/: gcp.py  kind.py
devops_bench/results/: __init__.py  aggregate.py  normalize.py  row.py
devops_bench/skills/: __init__.py  tool-invocation-skill.md
devops_bench/tasks/: __init__.py  loader.py  schema.py
devops_bench/verification/: runner.py  spec.py
docs/: contributing.md
hack/: boilerplate.py
scripts/: README.md
skills/: README.md
tasks/: README.md
tests/: README.md  test_factory.py
tests/unit/chaos/: test_agent.py  (+6 more)
(+77 files in other folders)
